# phase-2-hack-2

./: .gitignore  QWEN.md  README.md  TROUBLESHOOTING.md
.qwen/agents/: auth-agent.md  fastapi-backend-agent.md  neon-db-manager.md  nextjs-frontend-generator.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  bcrypt_test.py  debug_server.py  pyproject.toml  requirements.txt  run_backend.py  run_server.py  start_server.py  test_auth_auto.py  test_auth_endpoints.py  test_server.py  test_task_flow.py  test_user_model.py
backend/src/: database.py  main.py
backend/src/api/: auth_routes.py  task_routes.py  user_routes.py
backend/src/auth/: authorization.py  jwt_utils.py  jwt_validator.py  schemas.py
backend/src/middleware/: auth_middleware.py  user_validation.py
backend/src/models/: task.py  user.py
backend/src/services/: auth_service.py
backend/src/utils/: logging.py
backend/tests/contract/: test_auth.py  test_jwt_expiry.py  test_task_api.py  test_task_isolation.py  test_timestamps.py
backend/tests/integration/: test_auth_flow.py  test_session_mgmt.py  test_task_integration.py  test_task_isolation.py  test_timestamps.py  test_user_isolation.py
backend/tests/unit/: test_auth_service.py  test_jwt_utils.py  test_task_endpoints.py
docs/: authentication.md  quickstart.md  security-best-practices.md  security-hardening.md  task-api-documentation.md  task_creation_fix.md
frontend/: .gitignore  README.md  TESTING_CHECKLIST.md  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  (+1 more)
(+116 files in other folders)
